--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donate - Mind Matters</title>
+    <title>Volunteer - Mind Matters</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         :root {
@@ -11,6 +11,7 @@
             --secondary-color: rgb(10, 129, 66);
             --white: #ffffff;
         }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -21,118 +22,40 @@
             flex-direction: column;
             min-height: 100vh;
         }
+
         .content {
             margin: 120px auto 20px;
             max-width: 800px;
             text-align: center;
             flex: 1;
         }
-        .logo {
+
+        h1 {
+            font-size: 2rem;
             margin-bottom: 20px;
+            color: var(--secondary-color);
         }
-        .logo img {
-            width: 150px;
-        }
-        .donate-intro {
-            margin: 20px 0;
+
+        p {
             font-size: 1.2rem;
             line-height: 1.6;
         }
-        .payment-section {
-            display: flex;
-            justify-content: space-between;
-            gap: 30px;
-            margin: 30px 0;
-        }
-        .payment-option {
-            text-align: center;
-            padding: 20px;
-            border: 1px solid var(--secondary-color);
-            border-radius: 10px;
-            width: 350px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .payment-option:hover {
-            transform: translateY(-5px);
-        }
-        .payment-option img {
-            width: 100px;
-            margin-bottom: 10px;
-        }
-        .payment-name {
-            font-size: 1rem;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-        .payment-handle {
-            font-size: 1.1rem;
-            font-weight: bold;
-            word-break: break-word;
-            color: var(--secondary-color);
-        }
-        .alternate-methods {
-            text-align: center;
-            padding: 30px; /* Increased padding */
-            border: 1px solid var(--secondary-color);
-            border-radius: 10px;
-            width: calc(350px * 2 + 30px); /* Combined width of two boxes plus gap */
-            margin: 20px auto; /* Centered the box */
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .alternate-methods:hover {
-            transform: translateY(-5px);
-        }
-        .alternate-methods img {
-            width: 120px; /* Larger image */
-            margin-bottom: 10px;
-        }
-        .cta-button {
-            display: inline-block;
-            margin-top: 20px;
-            background: var(--primary-color);
-            color: var(--white);
-            padding: 15px 30px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.2rem;
+
+        a {
+            color: var(--primary-color);
             text-decoration: none;
-            transition: background 0.3s ease;
         }
-        .cta-button:hover {
-            background: var(--secondary-color);
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div id="header"></div>
     <div class="content">
-        <div class="logo">
-            <img src="/website/MindMattersLogo_Upload.png" alt="Mind Matters Logo">
-            <h2>Mind Matters Foundation</h2>
-        </div>
-        <p class="donate-intro">
-            Your generosity helps us fund groundbreaking neuroscience research and support communities impacted by neurological disorders.
-        </p>
-        <div class="payment-section">
-            <div class="payment-option">
-                <img src="venmologo.png" alt="Venmo">
-                <p class="payment-name">Donate via Venmo</p>
-                <p class="payment-handle">@mindmatters_foundation</p>
-            </div>
-            <div class="payment-option">
-                <img src="zellelogo.png" alt="Zelle">
-                <p class="payment-name">Donate via Zelle</p>
-                <p class="payment-handle">mindmattersfoundation24@gmail.com</p>
-            </div>
-        </div>
-        <div class="alternate-methods">
-            <img src="contact_image.png" alt="Contact">
-            <p class="payment-name">Alternate Donation Methods</p>
-            <p>DM us on Instagram or email us at <strong>mindmattersfoundation24@gmail.com</strong> if you'd like to suggest another donation method.</p>
-        </div>
-        <a href="/website/howwehelp" class="cta-button">Where Is Your Donation Going?</a>
+        <h1>Volunteer</h1>
+        <p>No Volunteering Opportunities at the moment. Check out our <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">Instagram</a> for updates.</p>
     </div>
     <div id="footer"></div>
     <script>
