--- a/about/index.html
+++ b/about/index.html
@@ -39,14 +39,14 @@
             height: auto;
         }
 
-        h1, h2 {
-            color: var(--secondary-color);
-            font-size: 2rem;
-        }
-
         .section {
             margin-bottom: 40px;
             text-align: center;
+        }
+
+        h1, h2 {
+            color: var(--secondary-color);
+            font-size: 2rem;
         }
 
         .leader-photo {
@@ -59,14 +59,14 @@
 
         .team-members {
             display: flex;
+            justify-content: space-evenly;
             flex-wrap: wrap;
-            gap: 40px;
-            justify-content: center;
+            gap: 20px;
         }
 
         .team-member {
             text-align: center;
-            max-width: 250px;
+            width: 200px;
         }
 
         .team-member img {
@@ -74,7 +74,18 @@
             width: 150px;
             height: 150px;
             object-fit: cover;
+            margin-bottom: 10px;
         }
+
+        .team-member h3 {
+            margin: 10px 0 5px;
+        }
+
+        .team-member p {
+            font-size: 0.9rem;
+            margin: 0;
+        }
+
     </style>
 </head>
 <body>
@@ -92,8 +103,6 @@
         </div>
         <div class="section">
             <h1>The Team</h1>
-
-            <!-- Founder Section -->
             <div class="team-member">
                 <img src="Rhys.png" alt="Rhys Ahamparam" class="leader-photo">
                 <h3>Rhys Ahamparam</h3>
@@ -102,8 +111,6 @@
                     Hi, my name is Rhys Ahamparam, and I’m a high school junior from Houston, Texas. I founded this nonprofit in memory of my grandfather, who was diagnosed with Lewy body dementia. Watching him battle this disease had a profound impact on me, and his passing earlier this year inspired me to take action.
                 </p>
             </div>
-
-            <!-- Additional Team Members -->
             <div class="team-members">
                 <div class="team-member">
                     <img src="placeholderimage.png" alt="Eshaan Tripathi">
