--- a/about/index.html
+++ b/about/index.html
@@ -12,43 +12,64 @@
             --white: #ffffff;
         }
 
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             color: var(--secondary-color);
             background: var(--white);
+            line-height: 1.6;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
-
+        .menu-bar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: var(--secondary-color);
+            color: var(--white);
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+            z-index: 2;
+            font-size: 1rem;
+            line-height: 1.2;
+        }
+        .menu-bar a {
+            margin: 0 20px;
+            text-decoration: none;
+            color: var(--white);
+            font-size: 1rem;
+            position: relative;
+            display: inline-block;
+        }
+        .menu-bar a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: var(--white);
+            transition: width 0.3s ease-in-out;
+        }
+        .menu-bar a:hover::after {
+            width: 100%;
+        }
         .content {
-            margin: 120px auto;
-            max-width: 1200px;
+            margin: 80px auto;
+            max-width: 800px;
+            padding: 20px;
             text-align: center;
-            flex: 1;
         }
-
-        .logo {
-            margin-bottom: 30px;
-        }
-
-        .logo img {
-            width: 400px;
-            height: auto;
-        }
-
-        h1, h2 {
-            color: var(--secondary-color);
-            font-size: 2rem;
-        }
-
         .section {
             margin-bottom: 40px;
-            text-align: center;
         }
-
         .leader-photo {
             width: 200px;
             height: 200px;
@@ -56,89 +77,145 @@
             border-radius: 50%;
             margin: 20px auto;
         }
-
+        h1, h2 {
+            color: var(--secondary-color);
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+        h3 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        p {
+            text-align: center;
+        }
         .team-members {
             display: flex;
+            justify-content: space-around;
+            align-items: flex-start;
             flex-wrap: wrap;
             gap: 40px;
-            justify-content: center;
         }
-
         .team-member {
+            width: 200px;
             text-align: center;
-            max-width: 250px;
         }
-
-        .team-member img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
+        footer {
+            background: var(--secondary-color);
+            color: var(--white);
+            padding: 20px;
+            text-align: center;
+            margin-top: auto;
+        }
+        footer .social-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        footer .social-buttons a {
+            display: flex;
+            align-items: center;
+        }
+        footer .social-buttons img {
+            width: 40px;
+            height: 40px;
+        }
+        footer a {
+            color: var(--primary-color);
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div id="header"></div>
+    <div class="menu-bar">
+        <a href="/website" class="menu-link">Home</a>
+        <a href="/website/about" class="menu-link">About</a>
+        <a href="/website/donate" class="menu-link">Donate</a>
+        <a href="/website/volunteer" class="menu-link">Volunteer</a>
+    </div>
     <div class="content">
-        <div class="logo">
-            <img src="/website/MindMattersLogo_Upload.png" alt="Mind Matters Logo">
-        </div>
         <div class="section">
             <h1>Our Mission</h1>
             <p>
-                At Mind Matters, our mission is to raise and allocate funds for groundbreaking neuroscience research aimed at curing Alzheimer's, dementia, Parkinson's, and other neurological disorders. 
-                We are committed to supporting the scientists and researchers making strides in understanding and treating these conditions.
+                At Mind Matters, our mission is to raise and allocate funds for groundbreaking
+                neuroscience research aimed at curing Alzheimer's, dementia, Parkinson's,
+                and other neurological disorders. We are committed to supporting the
+                scientists and researchers who are making strides in understanding and
+                treating these conditions. By funding innovative research, we provide hope
+                and work towards a future where these debilitating diseases are a thing of
+                the past. Join us in empowering minds and transforming lives through the
+                power of science and community support.
             </p>
         </div>
         <div class="section">
             <h1>The Team</h1>
-
+            
             <!-- Founder Section -->
-            <div class="team-member">
-                <img src="Rhys.png" alt="Rhys Ahamparam" class="leader-photo">
-                <h3>Rhys Ahamparam</h3>
-                <p>Founder</p>
-                <p>
-                    Hi, my name is Rhys Ahamparam, and I’m a high school junior from Houston, Texas. I founded this nonprofit in memory of my grandfather, who was diagnosed with Lewy body dementia. Watching him battle this disease had a profound impact on me, and his passing earlier this year inspired me to take action.
-                </p>
-            </div>
-
+            <h3>Founder</h3>
+            <img src="Rhys.png" alt="Rhys Ahamparam" class="leader-photo">
+            <h3>Rhys Ahamparam</h3>
+            <p>
+                Hi, my name is Rhys Ahamparam, and I’m a high school junior from Houston, Texas.
+                I founded this nonprofit in memory of my grandfather, who was diagnosed with
+                Lewy body dementia. Watching him battle this disease had a profound impact on me,
+                and his passing earlier this year inspired me to take action. Through this
+                organization, I hope to raise awareness and support for neuroscience research,
+                aiming to make a difference for others affected by similar conditions.
+            </p>
+            
             <!-- Additional Team Members -->
             <div class="team-members">
+                <!-- Eshaan Tripathi -->
                 <div class="team-member">
-                    <img src="placeholderimage.png" alt="Eshaan Tripathi">
+                    <img src="placeholderimage.png" alt="Eshaan Tripathi" class="leader-photo">
                     <h3>Eshaan Tripathi</h3>
                     <p>Director of Operations</p>
                 </div>
+
+                <!-- JD Suarez -->
                 <div class="team-member">
-                    <img src="JD.png" alt="JD Suarez">
+                    <img src="JD.png" alt="JD Suarez" class="leader-photo">
                     <h3>JD Suarez</h3>
                     <p>Outreach Coordinator</p>
                 </div>
+
+                <!-- David Achinivu -->
                 <div class="team-member">
-                    <img src="placeholderimage.png" alt="David Achinivu">
+                    <img src="placeholderimage.png" alt="David Achinivu" class="leader-photo">
                     <h3>David Achinivu</h3>
                     <p>Assistant Outreach Coordinator</p>
                 </div>
+
+                <!-- Emmanuel Wieczorek -->
                 <div class="team-member">
-                    <img src="placeholderimage.png" alt="Emmanuel Wieczorek">
+                    <img src="placeholderimage.png" alt="Emmanuel Wieczorek" class="leader-photo">
                     <h3>Emmanuel Wieczorek</h3>
                     <p>Volunteer Coordinator</p>
                 </div>
             </div>
         </div>
     </div>
-    <div id="footer"></div>
-    <script>
-        // Load header
-        fetch('/website/header.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('header').innerHTML = data);
-
-        // Load footer
-        fetch('/website/footer.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('footer').innerHTML = data);
-    </script>
+    <footer>
+        <div class="social-buttons">
+            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
+            </a>
+        </div>
+        <p>
+            <a href="/website/">Home</a> |
+            <a href="/website/about">About</a> |
+            <a href="/website/donate">Donate</a> |
+            <a href="/website/volunteer">Volunteer</a>
+        </p>
+        <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
+    </footer>
 </body>
 </html>
